fix home page video on iphone

--- a/src/components/VideoBackground/VideoBackground.module.scss
+++ b/src/components/VideoBackground/VideoBackground.module.scss
@@ -1,47 +1,45 @@
-$responsive_query_1: 768px;
+$medium: 768px;
 
-.root{
-  width: 100vw;
-  height: 100vh;
-  position: relative;
-  overflow: hidden;
-  .videoWrapper{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    //noinspection CssInvalidPropertyValue
-    video{
-      object-fit: cover;
-      border: none;
-      width: 100%;
-      height: 100%;
-    }
-    .volumeButtonWrapper{
-      position: fixed;
-      right: 18px;
-      display: flex;
-      justify-content: flex-end;
-      z-index: 3;
-      @media (min-width: $responsive_query_1) {
-        top:14%;
-      }
-      button{
-        margin-top:18px;
-        border: none;
-        background: none;
-        cursor: pointer;
-        img{
-          filter: brightness(0) invert(1);
-        }
-      }
-    }
-  }
+.root {
+	width: 100vw;
+	height: 100vh;
+	position: relative;
+	overflow: hidden;
+	.videoWrapper {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		//noinspection CssInvalidPropertyValue
+		video {
+			object-fit: cover;
+			border: none;
+			width: 100%;
+			height: 100%;
+		}
+		.volumeButtonWrapper {
+			position: fixed;
+			right: 18px;
+			display: flex;
+			justify-content: flex-end;
+			z-index: 3;
+			top: 11%;
+			button {
+				margin-top: 18px;
+				border: none;
+				background: none;
+				cursor: pointer;
+				img {
+					filter: brightness(0) invert(1);
+				}
+			}
+		}
+	}
 }
 // media
-@media (max-width: $responsive_query_1) {
-  .volumeButtonWrapper{
-    top:6%;
-  }
+@media (max-width: $medium) {
+	.volumeButtonWrapper {
+		top: 6%;
+	}
 }
